--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chalk": "^4.1.1",
     "cors": "^2.8.5",
     "date-fns": "^2.11.1",
+    "docx4js": "^3.2.17",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
@@ -44,7 +45,8 @@
     "pdf2json": "^1.2.5",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.5"
+    "winston-daily-rotate-file": "^4.5.5",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
@@ -62,6 +64,7 @@
     "@types/node": "^16.4.0",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
+    "@types/xml2js": "^0.4.9",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "babel-jest": "^27.0.6",
