--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,50 +4,52 @@ services:
   api:
     image: "node:16-alpine"
     env_file: '.env.docker'
-    container_name: "cv-api"
+    container_name: "api"
     volumes:
       - "./:/source"
     working_dir: /source
     ports:
       - "8000:8000"
     command: sh -c "npm install && npm start"
+    networks:
+      - elastic
 
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.15.0
     container_name: es01
     environment:
-        - discovery.type=single-node
-        - 'ES_JAVA_OPTS=-Xms512m -Xmx512m'
+      - discovery.type=single-node
+      - 'ES_JAVA_OPTS=-Xms512m -Xmx512m'
     ulimits:
-        memlock:
-          soft: -1
-          hard: -1
+      memlock:
+        soft: -1
+        hard: -1
     volumes:
-        - data01:/usr/share/elasticsearch/data
+      - data01:/usr/share/elasticsearch/data
     ports:
-        - 9200:9200
+      - 9200:9200
     networks:
-        - elastic
+      - elastic
 
   kib01:
     image: docker.elastic.co/kibana/kibana:7.15.0
     container_name: kib01
     ports:
-        - 5601:5601
+      - 5601:5601
     environment:
-        ELASTICSEARCH_HOSTS:
-          http://es01:9200
-          #  ELASTICSEARCH_URL: http://es01:9200
-          #  ELASTICSEARCH_HOSTS: '["http://es01:9200","http://es02:9200"]'
+      ELASTICSEARCH_HOSTS:
+        http://es01:9200
+        #  ELASTICSEARCH_URL: http://es01:9200
+      #  ELASTICSEARCH_HOSTS: '["http://es01:9200","http://es02:9200"]'
     networks:
-        - elastic
+      - elastic
     depends_on:
-        - es01
+      - es01
 
 volumes:
-   data01:
-      driver: local
+  data01:
+    driver: local
 
 networks:
-   elastic:
-      driver: bridge
+  elastic:
+    driver: bridge
