--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript"
   ],
   "dependencies": {
+    "@elastic/elasticsearch": "^7.15.0",
     "bcrypt": "^5.0.1",
     "chalk": "^4.1.1",
     "cors": "^2.8.5",
