--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "transpile": "tsc",
     "clean": "rimraf build",
     "sync-env": "sync-dotenv",
-    "build": "run-s clean lint:fix transpile",
+    "build": "run-s clean transpile",
     "test": "NODE_ENV=test yarn migrate && NODE_ENV=test jest --forceExit --detectOpenHandles --maxWorkers=1 --verbose",
     "lint": "eslint . --ext .ts,.json",
     "lint:fix": "eslint --fix . --ext .ts,.json",
@@ -57,6 +57,7 @@
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/lodash": "^4.14.171",
+    "@types/mocha": "^9.0.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.0",
     "@types/supertest": "^2.0.11",
