--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,11 @@
     "importHelpers": true,
     "removeComments": true,
     "downlevelIteration": true,
-    "lib": ["es2015", "es2016", "es2017"],
-
+    "lib": [
+      "es2015",
+      "es2016",
+      "es2017"
+    ],
     "strict": true,
     "alwaysStrict": true,
     "noImplicitAny": true,
@@ -20,21 +23,31 @@
     "noUnusedParameters": true,
     "strictFunctionTypes": true,
     "noFallthroughCasesInSwitch": true,
-
     "baseUrl": "./",
     "esModuleInterop": true,
     "preserveSymlinks": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
-    "types": ["node", "express"],
+    "types": [
+      "node",
+      "express",
+      "jest"
+    ],
     "allowSyntheticDefaultImports": true,
     "paths": {
-      "*": ["node_modules/*", "src/types/*"]
+      "*": [
+        "node_modules/*",
+        "src/types/*"
+      ]
     },
-
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
