--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash": "^4.17.21",
     "mocha": "^9.1.3",
     "morgan": "^1.10.0",
+    "pdf2json": "^1.2.5",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
