[FEAT] Create custom dockerfile and add tesseract and pdf2pic dependencies into it

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3"
 
 services:
   api:
-    image: "node:16-alpine"
+    build:
+      context: .
+      dockerfile: Dockerfile.api
     env_file: '.env.docker'
     container_name: "api"
     volumes:
