--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "lodash": "^4.17.21",
     "mocha": "^9.1.3",
     "morgan": "^1.10.0",
+    "node-tesseract-ocr": "^2.2.1",
     "pdf2json": "^1.2.5",
+    "pdf2pic": "^2.1.4",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5",
