--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "docx4js": "^3.2.17",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
     "mocha": "^9.1.3",
     "morgan": "^1.10.0",
     "pdf2json": "^1.2.5",
@@ -54,11 +54,11 @@
     "@babel/preset-typescript": "^7.14.5",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.1.7",
     "@types/faker": "^5.5.7",
     "@types/jest": "^26.0.24",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.4",
-    "@types/lodash": "^4.14.171",
     "@types/mocha": "^9.0.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.0",
