--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node-tesseract-ocr": "^2.2.1",
     "pdf2json": "^1.2.5",
     "pdf2pic": "^2.1.4",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5",
@@ -65,6 +66,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.0",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "@types/xml2js": "^0.4.9",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
