--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript"
   ],
   "dependencies": {
+    "@elastic/ecs-winston-format": "^1.3.1",
     "@elastic/elasticsearch": "^7.15.0",
     "chalk": "^4.1.1",
     "cors": "^2.8.5",
@@ -49,6 +50,7 @@
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5",
+    "winston-elasticsearch": "^0.15.9",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
