--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,15 +17,15 @@ services:
       - elastic
     depends_on:
       - es01
-      - kib01
       - log01
+    restart: unless-stopped
 
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.15.0
     container_name: es01
     environment:
       - discovery.type=single-node
-      - 'ES_JAVA_OPTS=-Xms512m -Xmx512m'
+      - 'ES_JAVA_OPTS=-Xms750m -Xmx750m'
     ulimits:
       memlock:
         soft: -1
@@ -36,6 +36,7 @@ services:
       - "9200:9200"
     networks:
       - elastic
+    restart: unless-stopped
 
   kib01:
     image: docker.elastic.co/kibana/kibana:7.15.0
@@ -51,6 +52,7 @@ services:
       - elastic
     depends_on:
       - es01
+    restart: unless-stopped
 
   log01:
     image: docker.elastic.co/logstash/logstash:7.15.0
@@ -75,6 +77,7 @@ services:
       - elastic
     depends_on:
       - es01
+    restart: unless-stopped
 
 volumes:
   data01:
