[FIX] Env issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     build:
       context: dockerfiles
       dockerfile: Dockerfile.api
-    env_file: '.env.docker'
+    env_file: '.env'
     container_name: "api"
     volumes:
       - "./:/source"
