--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ ELASTIC_URL=http://es01:9200
 LOGGING_DIR=logs
 LOGGING_LEVEL=debug
 
+# Front
+VITE_API_URL=http://localhost:8000
+
 # Tests
 TEST_APP_PORT=8080
 TEST_DB_NAME=starter_test
