--- a/dockerfiles/Dockerfile.front
+++ b/dockerfiles/Dockerfile.front
@@ -1,5 +1,6 @@
 FROM node:14
 RUN git clone https://github.com/stl-insta/cv-app.git
+COPY .env cv-app
 WORKDIR /cv-app
 RUN npm install -g http-server
 RUN npm install
